--- a/kubernetes/database/db_deployment.yaml
+++ b/kubernetes/database/db_deployment.yaml
@@ -23,7 +23,7 @@ spec:
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: bot-db-password
+                  name: bot-db-creds
                   key: POSTGRES_PASSWORD
           volumeMounts:
             - mountPath: /var/lib/postgresql/data
